# markdownfs

./: .gitignore  Cargo.toml  README.md  mkdocs.yml
.github/workflows/: docs.yml  sdks.yml
clients/: CONTRACT.md
clients/python/: README.md  pyproject.toml
clients/python/examples/: quickstart.py
clients/python/src/markdownfs/: __init__.py  _common.py  async_client.py  client.py  errors.py
clients/python/tests/: test_client.py
clients/typescript/: README.md  package.json  tsconfig.json
clients/typescript/examples/: quickstart.ts
clients/typescript/src/: client.test.ts  client.ts  errors.ts  index.ts  types.ts
deploy/cloudflare/: Dockerfile  README.md  wrangler.jsonc
deploy/cloudflare/src/: index.ts
docs/: CNAME  agent-workspace-demo.md  agent-workspace-positioning.md  cli-cloud-bridge.md  demo-readiness.md  execution-roadmap.md  filesystem-guide.md  getting-started.md  http-api-guide.md  huggingface-deployment.md  index.md  integrations.md  mcp-guide.md  semantic-index.md  user-management.md  verification-report.md  version-control.md
docs-site/: README.md  mkdocs.yml  pyproject.toml
docs-site/docs/: deployment.md
docs-site/docs/api/: http.md  mcp.md
docs-site/docs/concepts/: filesystem.md  users.md  versioning.md
docs-site/docs/getting-started/: huggingface.md  installation.md  quickstart.md
docs-site/docs/sdks/: python.md
docs/api/: http.md  mcp.md
docs/concepts/: versioning.md
docs/getting-started/: from-source.md
docs/sdks/: rust.md  typescript.md
examples/incident-workspace/: README.md
examples/incident-workspace/incidents/checkout-latency/: evidence.md  hypotheses.md  timeline.md
examples/incident-workspace/memory/agents/: researcher.md
examples/incident-workspace/runbooks/: payment-service.md
examples/notebooks/: 01_getting_started_http.ipynb  02_mount_and_start_using_mdfs.ipynb  03_user_delegation_to_agents.ipynb  README.md
huggingface/: .dockerignore  Dockerfile  README.md  deploy.sh  smoke-test.sh
src/: config.rs  db.rs  error.rs  fuse_mount.rs  lib.rs  main.rs  mcp.rs  persist.rs  posix.rs
src/auth/: mod.rs  perms.rs  registry.rs  session.rs
src/client/: mod.rs
src/cmd/: mod.rs  parser.rs
src/fs/: inode.rs  mod.rs
src/io/: mmap_reader.rs  mod.rs  writer.rs
src/remote/: blob.rs
src/server/: middleware.rs  mod.rs  paths.rs  perms.rs  routes_admin.rs  routes_auth.rs  routes_fs.rs  routes_vcs.rs  routes_workspace.rs  ui.rs
src/server/assets/: app.js  index.html  style.css
src/store/: blob.rs  commit.rs  index.rs  mod.rs  tree.rs
src/vcs/: mod.rs  revert.rs  snapshot.rs
src/workspace/: mod.rs
tests/: integration.rs  perf.rs  perf_comparison.rs
tests/integration/: dirs.rs  edge_cases.rs  files.rs  main.rs  metadata.rs  nav.rs  permissions.rs  persist.rs  pipes.rs  posix.rs  rm_mv_cp.rs  search.rs  symlinks.rs  vcs.rs  workflows.rs
tests/perf/: creation.rs  delete_mv_cp.rs  io.rs  listing.rs  main.rs  perms.rs  persistence.rs  pipes.rs  search.rs  vcs.rs  workloads.rs
tests/permissions/: adversarial.rs  agent.rs  alice.rs  bob.rs  carol.rs  cross_user.rs  main.rs  ownership.rs  root.rs  special_bits.rs  write_enforce.rs
