[package]
name = "markdownfs"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "markdownfs"
path = "src/main.rs"

[[bin]]
name = "markdownfs-server"
path = "src/bin/markdownfs_server.rs"

[[bin]]
name = "markdownfs-mcp"
path = "src/bin/markdownfs_mcp.rs"

[dependencies]
sha2 = "0.10"
memmap2 = "0.9"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
regex = "1"
glob = "0.3"
rustyline = "15"
thiserror = "2"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "1.4", features = ["server", "transport-io"] }
