[package]
name = "markdownfs"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "markdownfs"
path = "src/main.rs"

[[bin]]
name = "markdownfs-server"
path = "src/bin/markdownfs_server.rs"

[[bin]]
name = "markdownfs-mcp"
path = "src/bin/markdownfs_mcp.rs"

[[bin]]
name = "mdfs"
path = "src/bin/mdfs.rs"

[[bin]]
name = "markdownfs-mount"
path = "src/bin/markdownfs_mount.rs"
required-features = ["fuser"]

[dependencies]
sha2 = "0.10"
memmap2 = "0.9"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
regex = "1"
glob = "0.3"
rustyline = "15"
thiserror = "2"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "1.4", features = ["server", "transport-io"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
aws-config = "1"
aws-sdk-s3 = "1"
urlencoding = "2"
fuser = { version = "0.17.0", optional = true, default-features = false, features = ["abi-7-31", "macos-no-mount"] }

[features]
fuser = ["dep:fuser"]
