[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdownfs"
version = "0.1.0"
description = "Python client for MarkdownFS — a versioned virtual filesystem for markdown."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "MarkdownFS" }]
keywords = ["markdown", "filesystem", "agent", "vcs", "markdownfs"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.urls]
Homepage = "https://github.com/subramanya1997/markdownfs"
Documentation = "https://subramanya1997.github.io/markdownfs/"

[tool.hatch.build.targets.wheel]
packages = ["src/markdownfs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
